# yapuny

./: .gitignore  pyproject.toml  run_pipeline.py  train.py
data/: prepare.py  tokenizer.py  yapuny_tokenizer.json
data/raw/: corpus.txt  tokenizer.py
model/: __init__.py  attention.py  block.py  config.py  gpt.py  mlp.py
